Remove Features and Pricing from menu, update all CTAs to point to app.fridayi.com

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
             <div class="nav-menu" id="navMenu">
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="#courses" class="nav-link">Courses</a>
-                <a href="#features" class="nav-link">Features</a>
-                <a href="#pricing" class="nav-link">Pricing</a>
                 <a href="#about" class="nav-link">About</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
@@ -73,7 +71,7 @@
                         Join thousands of students and parents who trust Outscore for their exam preparation. 
                         Start your journey to academic success today.
                     </p>
-                    <a href="#enroll" class="hero-cta-button">Start Your Free Trial →</a>
+                    <a href="https://app.fridayi.com" class="hero-cta-button" target="_blank">Start Your Free Trial →</a>
                 </div>
             </div>
         </div>
@@ -118,7 +116,7 @@
                         next batch and get started with a free trial. Special early bird pricing available 
                         for limited time.
                     </p>
-                    <a href="#enroll" class="announcement-cta-button">Enroll Now - Start Your Free Trial →</a>
+                    <a href="https://app.fridayi.com" class="announcement-cta-button" target="_blank">Enroll Now - Start Your Free Trial →</a>
                 </div>
             </div>
         </div>
@@ -169,7 +167,7 @@
                     </div>
                 </div>
                 <div class="section-cta">
-                    <a href="#enroll" class="cta-button">Start Your Free Trial Today</a>
+                    <a href="https://app.fridayi.com" class="cta-button" target="_blank">Start Your Free Trial Today</a>
                 </div>
             </div>
         </section>
@@ -218,8 +216,6 @@
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#courses">Courses</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#pricing">Pricing</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
