hero image updated

--- a/index.html
+++ b/index.html
@@ -33,27 +33,8 @@
             <h1 class="hero-title">Give Your Child the Best Chance to Excel in 10th Board Exams</h1>
             <div class="hero-card">
                 <div class="hero-card-left">
-                    <!-- Colorful illustration placeholder - add hero illustration here -->
                     <div class="hero-illustration">
-                        <img src="images/hero-illustration.png" alt="Child Success Illustration" class="hero-illustration-img" onerror="this.style.display='none';">
-                        <div class="hero-illustration-placeholder">
-                            <div class="illustration-circle">
-                                <div class="illustration-lightbulb">🎓</div>
-                            </div>
-                            <div class="illustration-hands">
-                                <div class="hand hand-1">💯</div>
-                                <div class="hand hand-2">⭐</div>
-                                <div class="hand hand-3">🏆</div>
-                                <div class="hand hand-4">📖</div>
-                                <div class="hand hand-5">✨</div>
-                            </div>
-                            <div class="illustration-elements">
-                                <span class="element element-1">👩‍👧</span>
-                                <span class="element element-2">📱</span>
-                                <span class="element element-3">📊</span>
-                                <span class="element element-4">🎯</span>
-                            </div>
-                        </div>
+                        <img src="images/hero.png" alt="Child Success Illustration" class="hero-illustration-img">
                     </div>
                 </div>
                 <div class="hero-card-right">
