--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
-            <h1 class="hero-title">Give Your Child the Best Chance to Excel in 10th Board Exams</h1>
+            <h1 class="hero-title">Class 10th Exam preparation with AI</h1>
             <div class="hero-card">
                 <div class="hero-card-left">
                     <div class="hero-illustration">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="hero-card-right">
                     <p class="hero-description">
-                        <strong>Worried about your child's board exam preparation?</strong> Outscore provides 
+                        <strong>How to use AI to prepare for 10th standard board exams?</strong> Outscore provides 
                         AI-powered personalized learning that adapts to your child's unique needs, helping them 
                         build confidence and achieve their best scores.
                     </p>
@@ -156,7 +156,7 @@
         <!-- Testimonials Section -->
         <section id="testimonials" class="section">
             <div class="container">
-                <h2 class="section-title">What Other Mothers Are Saying</h2>
+                <h2 class="section-title">What Other Parents Are Saying</h2>
                 <div class="partners-grid">
                     <!-- Testimonial placeholders - add testimonials here -->
                     <div class="partner-logo-box">
