modified free trial CTA links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outscore - Help Your Child Ace 10th Standard Board Exams</title>
+    <title>Outscore: 10th Standard Exam Prep with AI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -51,7 +51,7 @@
                         Trusted by thousands of parents across India. Give your child the academic support 
                         they deserve and the results you've been hoping for.
                     </p>
-                    <a href="https://app.fridayi.com" class="hero-cta-button" target="_blank">Start Your Child's Free Trial →</a>
+                    <a href="https://api.fridayi.com/api/v2/school/free-trial" class="hero-cta-button" target="_blank">Start Your Child's Free Trial →</a>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
                         <div class="megaphone megaphone-2">📢</div>
                         <div class="graphic-footer">
                             <span class="footer-text">Free Trial Available</span>
-                            <span class="footer-text">Trusted by 10,000+ Parents</span>
+                            <span class="footer-text">Trusted by 1000+ Parents</span>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                         With 24/7 AI tutoring support, detailed progress reports, and expert guidance — you'll 
                         finally have peace of mind about their board exam preparation.
                     </p>
-                    <a href="https://app.fridayi.com" class="announcement-cta-button" target="_blank">Enroll Your Child - Start Free Trial →</a>
+                    <a href="https://api.fridayi.com/api/v2/school/free-trial" class="announcement-cta-button" target="_blank">Enroll Your Child - Start Free Trial →</a>
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="section-cta">
-                    <a href="https://app.fridayi.com" class="cta-button" target="_blank">Start Your Child's Free Trial Today</a>
+                    <a href="https://api.fridayi.com/api/v2/school/free-trial" class="cta-button" target="_blank">Start Your Child's Free Trial Today</a>
                 </div>
             </div>
         </section>
