website lang and styling tweaks

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outscore: 10th Standard Exam Prep with AI</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -30,28 +33,138 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
-            <h1 class="hero-title">Class 10th Exam preparation with AI</h1>
-            <div class="hero-card">
-                <div class="hero-card-left">
-                    <div class="hero-illustration">
-                        <img src="images/hero.png" alt="Child Success Illustration" class="hero-illustration-img">
+            <div class="hero-content-wrapper">
+                <div class="hero-content">
+                    <div class="hero-badge">
+                        <span class="badge-icon">🏆</span>
+                        <span class="badge-text">AI Tech Trusted by 1000+ Students</span>
+                    </div>
+                    <h1 class="hero-title">
+                        Master Grade 10 Board Exams with<br>
+                        <span class="gradient-text">AI-Powered Personalized Learning</span>
+                    </h1>
+                    <p class="hero-subtitle">
+                        Built by education experts with decades of experience. Our AI powered Instructional design focuses on learning and not just testing. It 
+                        identifies knowledge gaps and creates a customized study plan that delivers real results.
+                    </p>
+                    <div class="hero-stats">
+                        <div class="stat-item">
+                            <div class="stat-number">30%</div>
+                            <div class="stat-label">Score Improvement</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">24/7</div>
+                            <div class="stat-label">AI Support</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">1000+</div>
+                            <div class="stat-label">Active Students</div>
+                        </div>
+                    </div>
+                    <div class="hero-actions">
+                        <a href="https://api.fridayi.com/api/v2/school/free-trial" class="hero-cta-primary" target="_blank">
+                            Start Free Trial
+                            <span class="cta-arrow">→</span>
+                        </a>
+                    </div>
+                    <div class="hero-subjects-preview">
+                        <div class="subject-pill">Mathematics</div>
+                        <div class="subject-pill">English</div>
+                        <div class="subject-pill">Science</div>
                     </div>
                 </div>
-                <div class="hero-card-right">
-                    <p class="hero-description">
-                        <strong>How to use AI to prepare for 10th standard board exams?</strong> Outscore provides 
-                        AI-powered personalized learning that adapts to your child's unique needs, helping them 
-                        build confidence and achieve their best scores.
-                    </p>
-                    <p class="hero-description">
-                        Our platform identifies your child's strengths and weaknesses, creates a customized 
-                        study plan, and provides 24/7 support — so you can stop worrying and watch them thrive.
-                    </p>
-                    <p class="hero-description">
-                        Trusted by thousands of parents across India. Give your child the academic support 
-                        they deserve and the results you've been hoping for.
-                    </p>
-                    <a href="https://api.fridayi.com/api/v2/school/free-trial" class="hero-cta-button" target="_blank">Start Your Child's Free Trial →</a>
+                <div class="hero-image-wrapper">
+                    <div class="hero-image-container">
+                        <img src="images/hero.png" alt="AI-Powered Learning Platform" class="hero-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="hero-image-placeholder" style="display:none;">
+                            <div class="placeholder-content">
+                                <div class="placeholder-icon">🎓</div>
+                                <div class="placeholder-text">Premium Learning Experience</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Subjects Section -->
+    <section class="subjects-section">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-badge">Our Courses</span>
+                <h2 class="section-title">Comprehensive Grade 10 Curriculum</h2>
+                <p class="section-description">Expertly designed courses covering all major subjects with AI-powered personalization</p>
+            </div>
+            <div class="subjects-grid">
+                <div class="subject-card">
+                    <div class="subject-icon">📐</div>
+                    <h3 class="subject-name">Mathematics</h3>
+                    <p class="subject-description">Master algebra, geometry and trigonometry with interactive problem-solving and instant AI feedback.</p>
+                    <div class="subject-features">
+                        <span class="feature-tag">500+ Problems</span>
+                        <span class="feature-tag">AI Tutor</span>
+                    </div>
+                    <!-- <a href="https://api.fridayi.com/api/v2/school/free-trial" class="subject-cta" target="_blank">Explore Course →</a> -->
+                </div>
+                <div class="subject-card">
+                    <div class="subject-icon">📚</div>
+                    <h3 class="subject-name">English</h3>
+                    <p class="subject-description">Enhance reading comprehension, writing skills, and grammar with personalized practice and detailed feedback.</p>
+                    <div class="subject-features">
+                        <span class="feature-tag">Essay Practice</span>
+                        <span class="feature-tag">Grammar Mastery</span>
+                        <span class="feature-tag">AI Feedback</span>
+                    </div>
+                    <!-- <a href="https://api.fridayi.com/api/v2/school/free-trial" class="subject-cta" target="_blank">Explore Course →</a> -->
+                </div>
+                <div class="subject-card">
+                    <div class="subject-icon">🔬</div>
+                    <h3 class="subject-name">Science</h3>
+                    <p class="subject-description">Explore Physics, Chemistry, and Biology through interactive questions that teach and edxplain concepts.</p>
+                    <div class="subject-features">
+                        <span class="feature-tag">100+ Instructional questions</span>
+                        <span class="feature-tag">Detailed explanations</span>
+                        <span class="feature-tag">Doubt clarifications</span>
+                    </div>
+                    <!-- <a href="https://api.fridayi.com/api/v2/school/free-trial" class="subject-cta" target="_blank">Explore Course →</a> -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- How It Works Section -->
+    <section id="how-it-works" class="how-it-works-section">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-badge">Our Process</span>
+                <h2 class="section-title">How Outscore Works</h2>
+                <p class="section-description">A proven 4-step process that adapts to your child's unique learning needs</p>
+            </div>
+            <div class="process-steps">
+                <div class="process-step">
+                    <div class="step-number">01</div>
+                    <div class="step-icon">🎯</div>
+                    <h3 class="step-title">Assessment</h3>
+                    <p class="step-description">Our AI analyzes your child's current knowledge level across all topics to identify strengths and gaps.</p>
+                </div>
+                <div class="process-step">
+                    <div class="step-number">02</div>
+                    <div class="step-icon">📋</div>
+                    <h3 class="step-title">Personalized Plan</h3>
+                    <p class="step-description">A customized study plan is created based on their learning style, pace, and board exam requirements.</p>
+                </div>
+                <div class="process-step">
+                    <div class="step-number">03</div>
+                    <div class="step-icon">📖</div>
+                    <h3 class="step-title">Interactive Learning</h3>
+                    <p class="step-description">Engage with video lessons, practice problems, and AI-powered explanations tailored to their needs.</p>
+                </div>
+                <div class="process-step">
+                    <div class="step-number">04</div>
+                    <div class="step-icon">📊</div>
+                    <h3 class="step-title">Track & Improve</h3>
+                    <p class="step-description">Real-time progress tracking with detailed analytics and recommendations for continuous improvement.</p>
                 </div>
             </div>
         </div>
@@ -104,10 +217,42 @@
 
     <!-- Main Content -->
     <main class="main-content">
+        <!-- Stats Section -->
+        <section class="stats-section">
+            <div class="container">
+                <div class="stats-grid">
+                    <div class="stat-card">
+                        <div class="stat-icon">📈</div>
+                        <div class="stat-value">30%</div>
+                        <div class="stat-label">Average Score Improvement</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">👥</div>
+                        <div class="stat-value">1000+</div>
+                        <div class="stat-label">Active Students</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">⭐</div>
+                        <div class="stat-value">4.9/5</div>
+                        <div class="stat-label">Parent Satisfaction</div>
+                    </div>
+                    <!-- <div class="stat-card">
+                        <div class="stat-icon">🎓</div>
+                        <div class="stat-value">95%</div>
+                        <div class="stat-label">Pass Rate</div>
+                    </div> -->
+                </div>
+            </div>
+        </section>
+
         <!-- Why Choose Outscore Section -->
         <section id="features" class="section section-alt">
             <div class="container">
-                <h2 class="section-title">Why Mothers Trust Outscore for Their Children</h2>
+                <div class="section-header">
+                    <span class="section-badge">Why Choose Us</span>
+                    <h2 class="section-title">Built by Education Experts, Powered by AI</h2>
+                    <p class="section-description">Combining decades of teaching experience with cutting-edge technology</p>
+                </div>
                 <div class="help-grid">
                     <div class="help-card">
                         <div class="help-image">
@@ -154,11 +299,14 @@
         </section>
 
         <!-- Testimonials Section -->
-        <section id="testimonials" class="section">
+        <!-- <section id="testimonials" class="testimonials-section">
             <div class="container">
-                <h2 class="section-title">What Other Parents Are Saying</h2>
+                <div class="section-header">
+                    <span class="section-badge">Success Stories</span>
+                    <h2 class="section-title">What Parents & Students Are Saying</h2>
+                    <p class="section-description">Real results from real families across India</p>
+                </div>
                 <div class="partners-grid">
-                    <!-- Testimonial placeholders - add testimonials here -->
                     <div class="partner-logo-box">
                         <div class="testimonial-content">
                             <p class="testimonial-text">"I was so worried about Priya's maths — she always struggled. After 3 months with Outscore, she scored 92%! I wish I had found this earlier."</p>
@@ -179,7 +327,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!-- Footer -->
@@ -202,12 +350,12 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4 class="footer-title">Connect</h4>
+                    <!-- <h4 class="footer-title">Connect</h4>
                     <ul class="footer-links">
                         <li><a href="#" target="_blank">LinkedIn</a></li>
                         <li><a href="#" target="_blank">Twitter</a></li>
                         <li><a href="#" target="_blank">Facebook</a></li>
-                    </ul>
+                    </ul> -->
                 </div>
                 <div class="footer-section">
                     <h4 class="footer-title">Tips for Parents</h4>
@@ -221,7 +369,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Outscore. All rights reserved. | outscore.in</p>
+                <p>&copy; 2025 Outscore. All rights reserved. | outscore.in</p>
             </div>
         </div>
     </footer>
