removed tips for parents as CTA already there

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <li><a href="#" target="_blank">Facebook</a></li>
                     </ul> -->
                 </div>
-                <div class="footer-section">
+                <!-- <div class="footer-section">
                     <h4 class="footer-title">Tips for Parents</h4>
                     <p class="footer-description">
                         Get weekly tips on how to support your child's exam preparation and reduce their stress.
@@ -366,7 +366,7 @@
                         <input type="email" placeholder="Email Address *" required class="subscribe-input">
                         <button type="submit" class="subscribe-button">Subscribe</button>
                     </form>
-                </div>
+                </div> -->
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Outscore. All rights reserved. | outscore.in</p>
